# contracting_ipc

./: .gitignore  DEPLOYMENT.md  README.md  package.json  pyproject.toml  setup.py
contracting_ipc/: api.py  hooks.py  install.py  modules.txt
contracting_ipc/contracting_ipc/: __init__.py
contracting_ipc/contracting_ipc/doctype/ipc/: __init__.py  ipc.js  ipc.json  ipc.py  test_ipc.py  test_records.json
contracting_ipc/contracting_ipc/print_format/: __init__.py
contracting_ipc/contracting_ipc/print_format/ipc_standard/: __init__.py  ipc_standard.json
contracting_ipc/contracting_ipc/report/: __init__.py
contracting_ipc/contracting_ipc/report/ipc_summary/: __init__.py  ipc_summary.js  ipc_summary.json  ipc_summary.py
contracting_ipc/contracting_ipc/workspace/: __init__.py
contracting_ipc/contracting_ipc/workspace/contracting_ipc/: __init__.py  contracting_ipc.json
contracting_ipc/fixtures/: custom_field.json  role.json  workflow.json
contracting_ipc/public/: bundle.json
contracting_ipc/public/css/: contracting_ipc.css
contracting_ipc/public/js/: contracting_ipc.js
contracting_ipc/templates/generators/: .gitkeep
contracting_ipc/templates/includes/: .gitkeep
contracting_ipc/templates/pages/: .gitkeep
contracting_ipc/www/: .gitkeep
