[project]
name = "contracting_ipc"
version = "1.0.0"
description = "Interim Payment Certificates (IPC) Management for Construction Companies"
authors = [
    {name = "Your Company", email = "info@yourcompany.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
]
